# CobblemonSelector

./: .env  .env.prod  .gitignore  README.md  bot.py  index.html  package-lock.json  package.json  pyproject.toml  server-test.py  start.bat  start.sh  tsconfig.app.json  vite.config.ts
bot-plugins/converter/: __init__.py  spawn.yml
bot-plugins/converter/saves/: 0151_mew.json  0243_raikou.json  0244_entei.json  0245_suicune.json  0377_regirock.json  0378_regice.json  0379_registeel.json  0380_latias.json  0381_latios.json  0382_kyogre.json  0383_groudon.json  0384_rayquaza.json  0385_jirachi.json  0386_deoxys.json  0480_uxie.json  0481_mesprit.json  0482_azelf.json  0485_heatran.json  0486_regigigas.json  0488_cresselia.json  0490_manaphy.json  0491_darkrai.json  0492_shaymin.json  0494_victini.json  0638_cobalion.json  0639_terrakion.json  0640_virizion.json  0641_tornadus.json  0642_thundurus.json  0643_reshiram.json  0644_zekrom.json  0645_landorus.json  0720_hoopa.json  (+47 more)
bot-plugins/pokedex/: __init__.py  biome_list.py
bot-plugins/pokemon/: lang.py
data/lang/: zh_cn.json
data/spawn_pool/: 0010_caterpie.json
plugins/pokedex/: __init__.py  biome.py  dex.py  search.py  search_biome.py  spawn.py  util.py
plugins/pokemon/: __init__.py  common.py  lang.py  path.py
plugins/server/: __init__.py  config.py  server.py
plugins/test/: __init__.py
template-src/: App.css  App.tsx
template-src/api/: axiosConfig.ts  index.ts  pokemonApi.ts
template-src/components/: Ability.tsx  BaseStatsBar.tsx  BiomeHeader.tsx  BiomeTag.tsx  BucketTag.tsx  ConditionContainer.tsx  EvolutionChain.tsx  MoveTag.tsx  PokeCard.tsx  PokeImage.tsx  PokeInfoTag.tsx  SpawnBiomeBucketTag.tsx  SpawnBiomePokemonTag.tsx  Tag.tsx  TypeTag.tsx
template-src/layouts/: Biome.tsx  Pokemon.tsx  SpawnDetail.tsx
template-src/stores/: useBiome.ts  usePokemon.ts  useSpawnBiome.ts  useSpawnDetail.ts
template-src/types/: I18n.type.ts  Pokemon.type.ts
templates/: index.html
templates/assets/: index-7NPMlIH2.css  index-B1rId5bl.js
(+114 files in other folders)
