[tool.poetry]
name = "CobblemonSelector"
version = "0.1.0"
description = "CobblemonSelector"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
nonebot2 = { version = "^2.4.1", extras = ["fastapi"] }
nonebot-adapter-onebot = "^2.4.6"
nonebot-plugin-htmlrender = "^0.6.0"
pillow = "^11.1.0"
pypinyin = "^0.53.0"
levenshtein = "^0.27.1"

[tool.poetry.group.dev.dependencies]
requests = "^2.32.3"
beautifulsoup4 = "^4.13.3"
lxml = "^5.3.1"
pyyaml = "^6.0.2"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = ["nonebot_plugin_htmlrender"]
plugin_dirs = [
    "plugins"
]
builtin_plugins = []

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
